# fgo

./: .gitignore  .gitmodules  Makefile  README.md  REFERENCES.md  ZERO2ONE.md  afl-fuzz.c  build.sh  config.h
AFL-Fuzz/: Makefile  afl-fuzz.c  config.h
Analyzer/: .gitignore  CMakeLists.txt  README.md  build-analyzer.sh
Analyzer/src/: AnalyOptions.cpp  AnalyOptions.h  AnalyStats.cpp  AnalyStats.h  AnalyThreadPool.cpp  AnalyThreadPool.h  AnalyUtils.cpp  AnalyUtils.h  Analyzer.cpp  Analyzer.h  CMakeLists.txt  Main.cpp
Dependency/: .gitignore  README.md  build-gold-plugin.sh  build-jsoncpp.sh  build-llvm11.sh  build-svf.sh  download-libraries.sh
FGo-LLVM/: .gitignore  Clang-Wrapper.cpp  LLVM-Pass.cpp  LLVM-Runtime.c  Makefile  README.md  fgo-compiler-setup  fgo-compiler-setup.in
FGo-LLVM/test/: bb.distance.bt.json  bb.distance.df.json  bb.distance.final.json  instr.c
Utility/: .clang-format  .gitignore  FGoDefs.h  FGoFuzzingHelper.c  FGoFuzzingHelper.h  FGoFuzzingUtils.cpp  FGoFuzzingUtils.h  FGoUtils.hpp  Makefile
afl-2.57b/: Makefile  afl-fuzz.c  afl-tmin.c  config.h
distance/: .gitignore  add_edges.py  distance_generator.py  gen_distance_fast.py  gen_distance_orig.sh
distance/distance_calculator/: CMakeLists.txt  distance.bin.cc  distance.py
examples/: .gitignore
instrument/: .gitignore  Makefile  README.md  aflgo-clang.c  aflgo-pass.so.cc  aflgo-runtime.o.c
llvm_mode/: Makefile  afl-clang-fast.c  afl-llvm-pass.so.cc  afl-llvm-rt.o.c
llvm_mode/afl-clang-fast-rust/: Cargo.toml
llvm_mode/afl-clang-fast-rust/src/: main.rs
scripts/: distance.py
scripts/fuzz/: libming-CVE-2016-9827.sh
